Source/WebCore/dom/EventTarget.cpp
@@ -35,6 +35,7 @@
 #include "Event.h"
 #include "EventException.h"
 #include "InspectorInstrumentation.h"
+#include "WebKitTransitionEvent.h"
 #include <wtf/MainThread.h>
 #include <wtf/StdLibExtras.h>
 #include <wtf/Vector.h>
@@ -160,6 +161,28 @@ void EventTarget::uncaughtExceptionInEventHandler()
 {
 }
 
+static PassRefPtr<Event> createMatchingPrefixedEvent(const Event* event)
+{
+    if (event->type() == eventNames().transitionendEvent) {
+        const WebKitTransitionEvent* transitionEvent = static_cast<const WebKitTransitionEvent*>(event);
+        RefPtr<Event> prefixedEvent = WebKitTransitionEvent::create(eventNames().webkitTransitionEndEvent, transitionEvent->propertyName(), transitionEvent->elapsedTime());
+        prefixedEvent->setTarget(event->target());
+        prefixedEvent->setCurrentTarget(event->currentTarget());
+        prefixedEvent->setEventPhase(event->eventPhase());
+        return prefixedEvent.release();
+    }
+    ASSERT_NOT_REACHED();
+    return 0;
+}
+
+static AtomicString prefixedType(const Event* event)
+{
+    if (event->type() == eventNames().transitionendEvent)
+        return eventNames().webkitTransitionEndEvent;
+
+    return emptyString();
+}
+
 bool EventTarget::fireEventListeners(Event* event)
 {
     ASSERT(!NoEventDispatchAssertion::isEventDispatchForbidden());
@@ -169,10 +192,17 @@ bool EventTarget::fireEventListeners(Event* event)
     if (!d)
         return true;
 
-    EventListenerVector* listenerVector = d->eventListenerMap.find(event->type());
+    EventListenerVector* listenerPrefixedVector = 0;
+    AtomicString prefixedTypeName = prefixedType(event);
+    if (!prefixedTypeName.isEmpty())
+        listenerPrefixedVector = d->eventListenerMap.find(prefixedTypeName);
 
-    if (listenerVector)
-        fireEventListeners(event, d, *listenerVector);
+    EventListenerVector* listenerUnprefixedVector = d->eventListenerMap.find(event->type());
+
+    if (listenerUnprefixedVector)
+        fireEventListeners(event, d, *listenerUnprefixedVector);
+    else if (listenerPrefixedVector)
+        fireEventListeners(createMatchingPrefixedEvent(event).get(), d, *listenerPrefixedVector);
     
     return !event->defaultPrevented();
 }
