Source/WebCore/page/animation/ImplicitAnimation.cpp
@@ -151,13 +151,13 @@ void ImplicitAnimation::onAnimationEnd(double elapsedTime)
     if (keyframeAnim)
         keyframeAnim->setUnanimatedStyle(m_toStyle);
     
-    sendTransitionEvent(eventNames().webkitTransitionEndEvent, elapsedTime);
+    sendTransitionEvent(eventNames().transitionendEvent, elapsedTime);
     endAnimation();
 }
 
 bool ImplicitAnimation::sendTransitionEvent(const AtomicString& eventType, double elapsedTime)
 {
-    if (eventType == eventNames().webkitTransitionEndEvent) {
+    if (eventType == eventNames().transitionendEvent) {
         Document::ListenerType listenerType = Document::TRANSITIONEND_LISTENER;
 
         if (shouldSendEventForListener(listenerType)) {
@@ -176,7 +176,7 @@ bool ImplicitAnimation::sendTransitionEvent(const AtomicString& eventType, doubl
             m_compAnim->animationController()->addEventToDispatch(element, eventType, propertyName, elapsedTime);
 
             // Restore the original (unanimated) style
-            if (eventType == eventNames().webkitTransitionEndEvent && element->renderer())
+            if (eventType == eventNames().transitionendEvent && element->renderer())
                 setNeedsStyleRecalc(element.get());
 
             return true; // Did dispatch an event
